Deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpfuncapp
  namespace: app
  labels:
    app: httpfuncapp
spec:
  selector:
    matchLabels:
      app: httpfuncapp
  template:
    metadata:
      labels:
        app: httpfuncapp
    spec:
      containers:
        - name: httpfuncapp
          image: "%IMAGE%"          
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
