Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpfuncapp-service
  labels:
    app: httpfuncapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: httpfuncapp
