Deployment/functionapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpfuncapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: api.contoso.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: httpfuncapp
            port:
              number: 80
